cmake_minimum_required(VERSION 3.10)
project(mmn_15_computer_graphics)
set(CMAKE_CXX_STANDARD 14)
set(SOURCE_FILES main.cpp)
set(EXECUTABLE_NAME mmn15)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
add_executable(${EXECUTABLE_NAME} ${SOURCE_FILES})
target_link_libraries(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
